--- a/images/indx.html
+++ b/images/indx.html
@@ -129,6 +129,88 @@
                 </div>
             </div>
         </section>
+
+        <!-- new arrival -->
+
+        <section class="bg-info bg-opacity-25 rounded py-5 px-3 ">
+            <h1 class="text-center mt-5">New Arrival</h1>
+            <div class="card-group  ">
+                <div class="card ms-2 rounded-4 h-100">
+                    <img src="./bike-5.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-outline-danger">Purchase</button>
+                    </div>
+                </div>
+                <div class="ms-2 card rounded-4 h-100">
+                    <img src="./bike-5.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            content.</p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-outline-danger">Purchase</button>
+                    </div>
+                </div>
+                <div class="card ms-2 rounded-4 h-100">
+                    <img src="./bike-5.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This card has even longer content than the first to show that equal
+                            height action.</p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-outline-danger">Purchase</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- happy -->
+        <section>
+            <h1 class="text-center mt-5 mb-5">Happy Clients </h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./user-1.png" class="card-img-top w-25 text-center mx-auto mt-3" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./user-1.png" class="card-img-top w-25 text-center mx-auto mt-3" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./user-1.png" class="card-img-top w-25 text-center mx-auto mt-3" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content.</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            </div>
+            </div>
+
+        </section>
     </main>
 
     <footer>
