--- a/images/indx.html
+++ b/images/indx.html
@@ -7,7 +7,10 @@
     <title>BIKER ZONE PRACTICE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./css/style.css">
+
+    <script src="https://kit.fontawesome.com/13500a82ce.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -138,7 +141,7 @@
                 <div class="card ms-2 rounded-4 h-100">
                     <img src="./bike-5.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
                     </div>
@@ -149,7 +152,7 @@
                 <div class="ms-2 card rounded-4 h-100">
                     <img src="./bike-5.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional
                             content.</p>
                     </div>
@@ -160,7 +163,7 @@
                 <div class="card ms-2 rounded-4 h-100">
                     <img src="./bike-5.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This card has even longer content than the first to show that equal
                             height action.</p>
@@ -172,16 +175,23 @@
             </div>
         </section>
         <!-- happy -->
-        <section>
-            <h1 class="text-center mt-5 mb-5">Happy Clients </h1>
+        <section class="text-center">
+            <h1 class="text-center mt-5 mb-5"> <span class="text-primary">Happy</span> <span class="text-success">Clients</span> </h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card text-center h-100">
                         <img src="./user-1.png" class="card-img-top w-25 text-center mx-auto mt-3" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                        <div class="card-body ">
+
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in
                                 to additional content. This content is a little bit longer.</p>
+                            <p class="rating-icon d-flex mx-auto text-danger  ">
+                                <img src="./icons/star-regular.svg" alt="">
+                                <img src="./icons/star-regular.svg" alt="">
+                                <img src="./icons/star-regular.svg" alt="">
+                                <img src="./icons/star-regular.svg" alt="">
+                            </p>
+                            <h3 class="text-danger">sohrab</h3>
                         </div>
                     </div>
                 </div>
@@ -189,9 +199,15 @@
                     <div class="card h-100">
                         <img src="./user-1.png" class="card-img-top w-25 text-center mx-auto mt-3" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in
                                 to additional content. This content is a little bit longer.</p>
+                            <p>
+                                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                            </p>
+                            <h3 class="text-danger">sohrab</h3>
                         </div>
                     </div>
                 </div>
@@ -199,9 +215,15 @@
                     <div class="card h-100">
                         <img src="./user-1.png" class="card-img-top w-25 text-center mx-auto mt-3" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in
                                 to additional content.</p>
+                            <p>
+                                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                    class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <h3 class="text-danger">sohrab</h3>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -210,6 +232,57 @@
             </div>
             </div>
 
+        </section>
+        <!-- faq -->
+
+        <section class="mt-5 py-5 px-1 bg-secondary-subtle rounded-4">
+            <h1 class="my-5 text-center">Frequently Asked <span class="text-success">Questions</span> </h1>
+            <div class="row row-cols-1 row-cols-md-2 mt-5">
+                <div class="col text-center">
+                    <img class="w-50" src="./faq.png" alt="">
+                </div>
+                    <div class="col">
+                        
+                        <div class="accordion" id="accordionExample">
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                  Accordion Item #1
+                                </button>
+                              </h2>
+                              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                              </div>
+                            </div>
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                  Accordion Item #2
+                                </button>
+                              </h2>
+                              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall t about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                              </div>
+                            </div>
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                  Accordion Item #3
+                                </button>
+                              </h2>
+                              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                </div>
+            </div>
         </section>
     </main>
 
