--- a/images/index.html
+++ b/images/index.html
@@ -233,7 +233,7 @@
             </div>
 
         </section>
-        <!-- faq -->
+        <!-- faq qu -->
 
         <section class="mt-5 py-5 px-1 bg-secondary-subtle rounded-4">
             <h1 class="my-5 text-center">Frequently Asked <span class="text-success">Questions</span> </h1>
