--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </nav>
 
-        <!-- carousel slider -->
+        <!-- carousel ff slider -->
         <div id="carouselExample" class="carousel slide bg-danger p-5 bg-opacity-10 rounded">
             <div class="carousel-inner">
                 <div class="carousel-item active">
